# yantrikdb-mcp

./: .gitignore  .mcp.json  CONTRIBUTING.md  LICENSE  README.md  mcp.json  pyproject.toml  server.json  test_v14.py
.github/workflows/: ci.yml  publish.yml
benchmarks/: bench_token_savings.py
src/yantrikdb_mcp/: __init__.py  __main__.py  auth.py  embedder.py  http_backend.py  resources.py  server.py  skill_content_scanner.py  skill_security.py  skill_validation.py  tools.py
tests/: test_auth.py  test_backend_parity.py  test_cli.py  test_e2e_mcp.py  test_embedder_loader.py  test_http_backend_current.py  test_mcp_semantic_contract.py  test_new_tools_v090.py  test_server_singleton.py  test_skill_security.py  test_skill_validation.py  test_tool_profiles_and_budget.py  test_tool_signatures.py  test_v010_contract_and_shaping.py  test_v010_engine_contract_cases.py
