[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yantrikdb-mcp"
version = "0.9.0"
description = "YantrikDB — Cognitive memory for AI agents. Persistent semantic recall, knowledge graph, contradiction detection, and procedural learning. Ships as embeddable engine, network database, or MCP server."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Pranab Sarkar", email = "developer@pranab.co.in" },
]
keywords = [
    "mcp", "mcp-server", "model-context-protocol",
    "agent-memory", "ai-memory", "llm-memory", "cognitive-memory", "persistent-memory",
    "ai-agents", "agent-skills", "skill-substrate",
    "knowledge-graph", "vector-database", "embeddings", "semantic-search",
    "claude", "claude-code", "cursor", "windsurf", "anthropic",
    "sqlite", "rust", "python",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Engine v0.7.17+ pins the cumulative-fix set the MCP server is tested
    # against. Prior pins held loose at v0.7.15+; v0.8.2 tightens to
    # v0.7.17 to align the release train with yantrikdb-server v0.8.17
    # (shipped 2026-05-18, which carries engine v0.7.17). Required fixes
    # since v0.7.8:
    #   - v0.7.8: idempotent migration runner (yantrikdb#10) — fixes the
    #     v14→v15 "Cannot add a column to a view" failure that bricked
    #     first-restart for every pre-v0.7 database.
    #   - v0.7.9: potion-multilingual-128M added to the embedder registry.
    #   - v0.7.13 + v0.7.15: multilingual extractor + the restored
    #     extract call site (yantrikdb#15, #26). Pre-0.7.15 the multilingual
    #     download silently produced an empty cache dir.
    #   - v0.7.16: v26 schema migration foundation (additive, replay-safe).
    #   - v0.7.17: db.reembed() — atomic engine-side embedder migration.
    #     Not exposed as an MCP tool in v0.8.x; surfaces in a later version.
    "yantrikdb>=0.9.0",
    "mcp[cli]>=1.2.0",
    "click>=8.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
# Legacy / higher-quality embedder: ONNX MiniLM-L6-v2 at 384 dim.
# Required for back-compat with DBs created by yantrikdb-mcp <=0.5.3.
# Auto-detected when an existing 384-dim DB is opened.
onnx = [
    "onnxruntime>=1.17.0",
    "tokenizers>=0.15.0",
    "huggingface-hub>=0.20.0",
    "numpy>=1.24.0",
]
dev = [
    "pytest>=8.0",
]
torch = ["sentence-transformers>=3.0.0"]

[project.scripts]
yantrikdb-mcp = "yantrikdb_mcp:main"

[project.urls]
Homepage = "https://yantrikdb.com"
Repository = "https://github.com/yantrikos/yantrikdb-mcp"
Documentation = "https://yantrikdb.com/guides/mcp/"
Issues = "https://github.com/yantrikos/yantrikdb-mcp/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
